fix: hide useless scrollbar on non-safari browsers

--- a/scss/global/_base.scss
+++ b/scss/global/_base.scss
@@ -5,15 +5,18 @@ body {
     font-family: $font-roboto;
 }
 
-html,
+.is-safari {
+    overflow-y: scroll;
+    overflow-x: hidden;
+
+    @include for-desktop-up {
+        overflow: visible;
+    }
+}
+
 body {
     overflow-y: scroll;
     overflow-x: hidden;
-}
-@include for-desktop-up {
-    body {
-        overflow: visible;
-    }
 }
 
 body {
